<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/actionbar"
        android:id="@+id/actionbar"
        android:layout_alignParentTop="true">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/goback"
            android:layout_gravity="center_vertical"
            android:id="@+id/goback">
        </ImageView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/edit_info"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:paddingRight="20dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:background="@color/white">
            <TextView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:text="@string/head_image"
                >
            </TextView>
            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/head_image_upload"
                android:src="@drawable/default_head"
                android:scaleType="centerCrop"
                app:riv_corner_radius="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp">
            </com.makeramen.roundedimageview.RoundedImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/white"
            android:paddingLeft="30dp">
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:text="@string/sign"
                >
            </TextView>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginLeft="30dp"
                android:hint="@string/input_hint"
                android:id="@+id/sign"
                android:textSize="18dp">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/white"
            android:paddingLeft="30dp"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:text="@string/nick_name"
                >
            </TextView>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginLeft="30dp"
                android:hint="@string/input_hint"
                android:id="@+id/nickname"
                android:textSize="18dp">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/white"
            android:paddingLeft="30dp">
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:text="@string/sex"
                >
            </TextView>
            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:entries="@array/sex"
                android:id="@+id/sex"
                android:layout_marginLeft="30dp"
                android:theme="@style/itemSpinnerStyle">
            </androidx.appcompat.widget.AppCompatSpinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/white"
            android:paddingLeft="30dp"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:text="@string/company"
                >
            </TextView>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginLeft="30dp"
                android:hint="@string/input_hint"
                android:id="@+id/company"
                android:textSize="18dp">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/white"
            android:paddingLeft="30dp">
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:text="@string/duty"
                >
            </TextView>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginLeft="30dp"
                android:hint="@string/input_hint"
                android:id="@+id/duty"
                android:textSize="18dp">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/white"
            android:paddingLeft="30dp">
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:text="@string/contact_way"
                >
            </TextView>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginLeft="30dp"
                android:hint="@string/input_hint"
                android:id="@+id/email"
                android:textSize="18dp">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/shape_register_button"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/confirm_edit_info">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="确定"
                android:textSize="22dp"
                android:gravity="center"
                android:layout_gravity="center|center_horizontal"
                android:textColor="@color/white">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
