<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/actionbar"
        android:id="@+id/actionbar"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:id="@+id/goback">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/goback"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                >
            </ImageView>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_password"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            >
        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:background="@color/white">
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:text="@string/old_password"
                android:gravity="start">
            </TextView>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginLeft="30dp"
                android:hint="@string/input_hint"
                android:inputType="textPassword"
                android:id="@+id/old_password"
                android:textSize="18dp">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:paddingLeft="30dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:text="@string/new_password"
                android:gravity="start">
            </TextView>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginLeft="30dp"
                android:hint="@string/input_hint"
                android:inputType="textPassword"
                android:id="@+id/new_password"
                android:textSize="18dp">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:paddingLeft="30dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:text="@string/confirm_new_password"
                android:gravity="start">
            </TextView>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginLeft="30dp"
                android:hint="@string/input_hint"
                android:inputType="textPassword"
                android:id="@+id/confirm_new_password"
                android:textSize="18dp">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/shape_register_button"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/confirm_edit_info">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="确定"
                android:textSize="22dp"
                android:gravity="center"
                android:layout_gravity="center|center_horizontal"
                android:textColor="@color/white">
            </TextView>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
