<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/goback_8a"
        android:layout_alignParentTop="true"
        android:id="@+id/goback">
    </ImageView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/goback"
        android:id="@+id/title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textStyle="bold"
            android:textSize="35dp"
            android:id="@+id/register_title">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_note"
            android:layout_below="@+id/register_title"
            android:id="@+id/register_note">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_protocol_title"
            android:layout_toRightOf="@+id/register_note"
            android:layout_below="@+id/register_title"
            android:textStyle="bold"
            android:id="@+id/user_protocol_title">
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:id="@+id/phone_round">

            <TextView
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="20dp"
                android:layout_marginTop="8dp">
            </TextView>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:lines="1"
                android:maxLength="11"
                android:id="@+id/phone_number"
                android:inputType="phone">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:id="@+id/password_round"
            android:layout_below="@+id/phone_round"
            android:orientation="horizontal">
            <TextView
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:text="密        码："
                android:textSize="20dp"
                android:layout_marginTop="8dp">
            </TextView>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:lines="1"
                android:maxLength="11"
                android:id="@+id/password"
                android:inputType="textPassword">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:id="@+id/confirm_password_round"
            android:layout_below="@+id/password_round"
            android:orientation="horizontal">
            <TextView
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textSize="20dp"
                android:layout_marginTop="8dp">
            </TextView>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:lines="1"
                android:maxLength="11"
                android:id="@+id/confirm_password"
                android:inputType="textPassword">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:id="@+id/username_round"
            android:layout_below="@+id/confirm_password_round"
            android:orientation="horizontal">
            <TextView
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:text="姓        名："
                android:textSize="20dp"
                android:layout_marginTop="8dp">
            </TextView>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:lines="1"
                android:maxLength="11"
                android:id="@+id/username"
                android:inputType="textPersonName">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:id="@+id/job_round"
            android:layout_below="@+id/username_round"
            android:orientation="horizontal">
            <TextView
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:text="职        务："
                android:textSize="20dp"
                android:layout_marginTop="8dp">
            </TextView>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:lines="1"
                android:maxLength="11"
                android:id="@+id/job"
                android:inputType="text">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:id="@+id/question_round"
            android:layout_below="@+id/job_round"
            android:orientation="horizontal">
            <TextView
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:text="安全问题："
                android:textSize="20dp"
                android:layout_marginTop="8dp">
            </TextView>
            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:entries="@array/question"
                android:id="@+id/chose_question">
            </androidx.appcompat.widget.AppCompatSpinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:id="@+id/answer_round"
            android:layout_below="@+id/question_round"
            android:orientation="horizontal">
            <TextView
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:text="答        案："
                android:textSize="20dp"
                android:layout_marginTop="8dp">
            </TextView>
            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:lines="1"
                android:maxLength="11"
                android:id="@+id/answer"
                android:inputType="text">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/answer_round"
            android:background="@drawable/shape_register_button"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:id="@+id/register">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="注册"
                android:textSize="25dp"
                android:gravity="center"
                android:layout_gravity="center|center_horizontal"
                android:textColor="@color/white">
            </TextView>
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>